to continue work at home all tests are green. sequence of O-X-O-X-O is checked